--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,26 +5,26 @@
   box-sizing: border-box;
 }
 body {
-  font-family: "Lato", sans-serif;  
+  font-family: "Lato", sans-serif;
   overflow-x: hidden;
 }
 .container {
   position: relative;
 }
 .slide {
-  display: flex;  
-  height: 100vh;  
+  display: flex;
+  height: 100vh;
   width: 100%;
   transition: 1s cubic-bezier(0.6, 0.33, 0.45, 0.94);
 }
 .img {
-    overflow: hidden;
-    flex-shrink: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  overflow: hidden;
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .left {
@@ -43,49 +43,76 @@ body {
   filter: invert(1);
   cursor: pointer;
 }
-.content{
-    max-width: 700px;    
-    width: 100%;
-    padding: 10px 100px 10px 10px;
-    margin: 0 100px 0 0;
+.content {
+  max-width: 700px;
+  width: 100%;
+  padding: 10px 100px 10px 10px;
+  margin: 0 100px 0 0;
 }
-.content h1{
-    color: transparent;
-    text-transform: uppercase;    
-    font-size: clamp(4rem,7vw,8rem);
-    font-weight: bold;
-    -webkit-text-stroke: 2px #fff;
+.content h1 {
+  color: transparent;
+  text-transform: uppercase;
+  font-size: clamp(3rem, 7vw, 8rem);
+  font-weight: bold;
+  -webkit-text-stroke: 2px #fff;
 }
-.content h2{
-    text-transform: uppercase;
-    font-size: 3rem;
-    color: #fff;
+.content h2 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  color: #fff;
 }
-.content p{
-    margin-top: 10px;
-    font-size: 1.1rem;
-    color: rgba(255,255,255,.6);
+.content p {
+  margin-top: 10px;
+  font-size: 1.1rem;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 /* Dots */
 
-.dots{
-    position: absolute;
-    display: flex;
-    bottom: 10px;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: 10px;
-    z-index: 11111;
+.dots {
+  position: absolute;
+  display: flex;
+  bottom: 10px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+  z-index: 11111;
 }
-.dot{
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    box-shadow: 0 0 ;    
-    display: inline-block;
-    cursor: pointer;
-    box-shadow: 0 0 5px 2px rgba(0,0,0,0.6);
-    border: 1px solid #fff;
+.dot {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  box-shadow: 0 0;
+  display: inline-block;
+  cursor: pointer;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.6);
+  border: 1px solid #fff;
+}
+
+/* Responsive  */
+
+@media (max-width: 991px) {
+  .right img,
+  .left img {
+    width: 50px;
+  }
+  .slide {
+    height: 70vh;
+  }
+  .content {
+    max-width: 600px;
+    padding: 10px 50px 10px 20px;
+    margin: 0 auto;
+  }
+  .content h1,
+  .content h2 {
+    text-align: right;
+  }
+}
+@media (max-width: 991px) {
+  .right img,
+  .left img {
+    width: 30px;
+  }
 }
